# Qt-quick-MVVM

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp  res.qrc
Model/: MainModel.h
ViewModel/: MainViewModel.h
qml/QtQuickMvvmExample/: MainView.qml  MainView.qmlc
qml/QtQuickMvvmExample/Controls/: Button.qml  Button.qmlc  TextBox.qml  TextBox.qmlc
qmlapplicationviewer/: qmlapplicationviewer.cpp  qmlapplicationviewer.h
